<resources>
    <string name="app_name">To-Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="delete" />
    <string name="category">Category</string>
    <string name="start_date">Start Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_end_date">Select End Date</string>
</resources>